Creates Blob Retrieval Endpoint (#96)
